bugfix code block not centered

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -12,7 +12,6 @@
 
 body {
     background-color: black;
-
     font-family: Okta, sans-serif;
     font-size: 1.6rem;
     font-weight: 400;
@@ -28,12 +27,8 @@ code {
     font-size: 1.4rem;
 }
 
-pre {
-    width: 100%;
-    margin: 0 4em;
-}
-
 a {
+    color: inherit;
     text-decoration: inherit;
 
     &:active,
